# urlshort

./: README.md  pyproject.toml  setup.cfg  setup.py  short.py  status_results.txt
urlshort/: short.py
